<resources>
    <string name="app_name">ChallengesChapter3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_screen_2_text">Go To Screen 2</string>
    <string name="go_to_screen_3_text">Go To Screen 3</string>
    <string name="masukkan_nama_text">Masukkan Nama</string>
    <string name="masukkan_usia_text">Masukkan Usia</string>
    <string name="masukkan_alamat_text">Masukkan Alamat</string>
    <string name="masukkan_pekerjaan_text">Masukkan Pekerjaan</string>
    <string name="piece_per_dus_text">Piece Per Dus</string>
    <string name="masuk_text">Masuk</string>
    <string name="login_text">Selamat Datang!\nSilahkan Login</string>
    <string name="input_data_text">Input Data</string>
    <string name="mulai_hitung_text">Mulai Hitung</string>
    <string name="klik_mulai_hitung_untuk_mulai_berhitung_text">Klik Mulai Hitung Untuk Mulai Berhitung</string>
    <string name="harga_per_dus_text">Harga Per Dus</string>
    <string name="rp_20_000_text">Rp.20.000</string>
    <string name="jumlah_piece_per_dus_text">Jumlah Piece Per Dus</string>
    <string name="_20_text">20</string>
    <string name="harga_per_piece_text">Harga Per Piece</string>
    <string name="harga_jual_per_piece_text">Harga Jual Per Piece</string>
    <string name="total_habis_terjual_text">Total Habis Terjual</string>
    <string name="total_keuntungan_text">Total Keuntungan</string>
    <string name="hitung_text">Hitung!</string>
    <string name="hitung_keuntungan_app_text">Hitung Keuntungan App</string>
    <string name="btn_login_text">Login</string>
    <string name="rp_1000_text">Rp 1000</string>
    <string name="hasil_penjualan_text">Hasil Penjualan</string>
    <string name="harga_jual_piece_per_dus_text">Harga jual * Piece per Dus</string>
    <string name="rp_40_000_text">Rp 40.000</string>
    <string name="rp_2000_text">Rp 2000</string>
    <string name="keuntungan_anda_text">Keuntungan Anda</string>
    <string name="hasil_habis_terjual_harga_per_dus_text">Hasil Penjualan - Harga per Dus</string>
    <string name="rp_300_000_text">Rp 300.000</string>
    <string name="harga_piece_per_dus_text">Harga Piece per Dus</string>
    <string name="harga_per_dus_piece_per_dus_text">Harga per Dus / Piece per Dus</string>
</resources>