<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentKetiga">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tv_tutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/klik_mulai_hitung_untuk_mulai_berhitung_text"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="16dp"
        android:layout_margin="24dp"
        app:cardCornerRadius="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:text="@string/harga_per_dus_text"/>
                <TextView
                    android:id="@+id/tv_harga_per_dus"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="@dimen/text_size_price_detail"
                    android:textAlignment="textEnd"
                    android:text="@string/rp_20_000_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:text="@string/jumlah_piece_per_dus_text"/>
                <TextView
                    android:id="@+id/tv_jumlah_piece_per_dus"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="@dimen/text_size_price_detail"
                    android:textAlignment="textEnd"
                    android:text="@string/_20_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:text="@string/harga_per_piece_text"/>
                <TextView
                    android:id="@+id/tv_harga_per_piece"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="@dimen/text_size_price_detail"
                    android:textAlignment="textEnd"
                    android:text="@string/rp_20_000_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:text="@string/harga_jual_per_piece_text"/>
                <TextView
                    android:id="@+id/tv_harga_jual_per_piece"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="@dimen/text_size_price_detail"
                    android:textAlignment="textEnd"
                    android:text="@string/rp_20_000_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:text="@string/total_habis_terjual_text"/>
                <TextView
                    android:id="@+id/tv_total_habis_terjual"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="@dimen/text_size_price_detail"
                    android:textAlignment="textEnd"
                    android:text="@string/rp_20_000_text"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/total_keuntungan_text"/>
                <TextView
                    android:id="@+id/tv_total_keuntungan"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="@dimen/text_size_price_detail"
                    android:textAlignment="textEnd"
                    android:text="@string/rp_20_000_text"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mulai_hitung_text"
        android:textSize="20sp"
        android:backgroundTint="@color/biru_muda"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-condensed-medium"
        app:cornerRadius="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"
        app:layout_constraintTop_toBottomOf="@id/cv_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>