<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentKeempat">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_form_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="12dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/box"/>
            <EditText
                android:id="@+id/et_harga_per_dus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="18dp"
                android:textSize="24sp"
                android:inputType="number"
                android:hint="@string/harga_per_dus_text"
                android:background="@drawable/custom_edit_text"
                tools:ignore="Autofill" />
            <EditText
                android:id="@+id/et_piece_per_dus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="18dp"
                android:textSize="24sp"
                android:inputType="number"
                android:hint="@string/piece_per_dus_text"
                android:background="@drawable/custom_edit_text"
                tools:ignore="Autofill" />
            <EditText
                android:id="@+id/et_harga_jual_per_piece"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="18dp"
                android:textSize="24sp"
                android:inputType="number"
                android:hint="@string/harga_jual_per_piece_text"
                android:background="@drawable/custom_edit_text"
                tools:ignore="Autofill" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_to_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hitung_text"
                android:textSize="20sp"
                android:backgroundTint="@color/biru_muda"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-condensed-medium"
                app:cornerRadius="10dp"
                android:layout_marginTop="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="64dp"
                android:paddingEnd="64dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>